logs/launch_2025-09-19_18-19-12.log
==============================================
 Steve Horses Pro — FAST launcher
 Started: 2025-09-19 18:19:12
 Base:    /Users/stephenjerome/Desktop/SteveHorsesPro
 Log:     /Users/stephenjerome/Desktop/SteveHorsesPro/logs/launch_2025-09-19_18-19-12.log
==============================================

[OK] Using python: /usr/bin/python3

  File "/Users/stephenjerome/Desktop/SteveHorsesPro/steve_horses_pro.py", line 1266
    try:
    ^
SyntaxError: invalid syntax

[DONE] python exit code: 1
[OK] Report: /Users/stephenjerome/Desktop/SteveHorsesPro/outputs/2025-09-19_horses_targets+full.html  (134722 bytes)

[FINISH] 2025-09-19 18:19:12  exit code: 1
